--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,7 @@ base {
     archivesName = project.archives_base_name
 }
 
-loom {
-    splitEnvironmentSourceSets()
 
-    mods {
-        "shape_shifter_curse" {
-            sourceSet sourceSets.main
-            sourceSet sourceSets.client
-        }
-    }
-}
 
 repositories {
     // Add repositories to retrieve artifacts from in here.
@@ -38,6 +29,9 @@ repositories {
 
     //Owo
     maven { url 'https://maven.wispforest.io/releases/' }
+
+    //maven { url "https://maven.shedaniel.me/" }
+    //maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 dependencies {
@@ -60,6 +54,12 @@ dependencies {
     //Owo
     modImplementation "io.wispforest:owo-lib:${project.owo_version}"
     include "io.wispforest:owo-sentinel:${project.owo_version}"
+    annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+
+    //modApi("me.shedaniel.cloth:cloth-config-fabric:11.1.136"){
+    //        exclude(group: "net.fabricmc.fabric-api")
+    //}
+
 }
 
 processResources {
