--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,6 @@ base {
     archivesName = project.archives_base_name
 }
 
-
-
 repositories {
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
@@ -24,6 +22,7 @@ repositories {
     maven {
         url 'https://repository.hanbings.io/proxy'
     }
+
     // The Maven with the mods source
     maven { url 'https://maven.azuredoom.com/mods' }
 
@@ -41,6 +40,13 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    implementation 'com.google.code.gson:gson:2.12.1'
+
+    //mappings loom.layered() {
+    //    officialMojangMappings()
+    //    parchment("org.parchmentmc.data:parchment-1.20.1:2023.09.03@zip")
+    //}
 
     //Common 1.20.1+ Latest Only
     compileOnly "mod.azure.azurelib:azurelib-common-1.20.1:2.0.41"
