接入Origins，直接使用不同的Origin实现不同的形态功能 还剩CursedMoon逻辑、自定义模型与动画，以及视觉效果的逻辑 之后mod的框架就算基本成型了

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,25 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
 	fabric_version=0.92.3+1.20.1
+	apoli_version = 2.9.0
+	reach_version = 2.4.0
+	breathing_lib_version = 01269c3
+	mod_menu_version = 7.2.2
 
 # https://maven.wispforest.io/io/wispforest/lavender/
 lavender_version=0.1.9+1.20
 
 # https://maven.wispforest.io/io/wispforest/owo-lib/
 owo_version=0.11.2+1.20
+
+# PlayerAbilityLib
+pal_version = 1.9.0
+
+origins_version=v1.10.0
+
+eggolib_version=v1.10.4-1.20
+
+carpet_version=1.20.2-1.4.119+v230928
+cca_version=5.1.0
+clothconfig_version=10.0.96
+pehkui_version=3.7.8
