--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,10 @@ repositories {
     maven {
         url 'https://maven.aliyun.com/nexus/content/groups/public'
     }
-    maven {
-        url 'https://repository.hanbings.io/proxy'
-    }
+    //maven {
+        //url 'https://repository.hanbings.io/proxy'
+        //mavenCentral()
+    //}
 
     // The Maven with the mods source
     maven { url 'https://maven.azuredoom.com/mods' }
@@ -29,8 +30,53 @@ repositories {
     //Owo
     maven { url 'https://maven.wispforest.io/releases/' }
 
-    //maven { url "https://maven.shedaniel.me/" }
-    //maven { url "https://maven.terraformersmc.com/releases/" }
+
+    exclusiveContent {
+
+        forRepository {
+            maven {
+                name = "Modrinth"
+                url = "https://api.modrinth.com/maven"
+            }
+        }
+
+        filter {
+            includeGroup "maven.modrinth"
+        }
+
+    }
+    maven {
+        name = "QuiltMC"
+        url = "https://maven.quiltmc.org/repository/release"
+    }
+    maven {
+        name = "Ladysnake Mods"
+        url = "https://maven.ladysnake.org/releases"
+    }
+    maven {
+        url = "https://maven.cafeteria.dev"
+        content {
+            includeGroup "net.adriantodt.fabricmc"
+        }
+    }
+    maven {
+        url = "https://maven.jamieswhiteshirt.com/libs-release"
+        content {
+            includeGroup "com.jamieswhiteshirt"
+        }
+    }
+    maven {
+        url = "https://masa.dy.fi/maven"
+    }
+    maven {
+        url = "https://jitpack.io"
+    }
+    maven {
+        url = "https://maven.shedaniel.me"
+    }
+    maven {
+        url = "https://maven.terraformersmc.com"
+    }
 }
 
 dependencies {
@@ -62,9 +108,44 @@ dependencies {
     include "io.wispforest:owo-sentinel:${project.owo_version}"
     annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
 
-    //modApi("me.shedaniel.cloth:cloth-config-fabric:11.1.136"){
-    //        exclude(group: "net.fabricmc.fabric-api")
-    //}
+    // Reach Entity Attributes by jamieswhiteshirt
+    modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
+
+    // player ability lib
+    //modImplementation "io.github.ladysnake:PlayerAbilityLib:${pal_version}"
+    //include "io.github.ladysnake:PlayerAbilityLib:${pal_version}"
+
+    // Apoli by Apace100
+    modImplementation "com.github.apace100:apoli:${project.apoli_version}"
+    include "com.github.apace100:apoli:${project.apoli_version}"
+
+    modApi("com.github.Virtuoel:Pehkui:${pehkui_version}", {
+        exclude group: "net.fabricmc.fabric-api"
+    })
+
+    // Origins by Apace100
+    //modImplementation "com.github.apace100:origins-fabric:${project.origins_version}"
+
+    // BreathingLib (fork) by eggohito
+    //modImplementation "com.github.eggohito:BreathingLib:${project.breathing_lib_version}"
+    //include "com.github.eggohito:BreathingLib:${project.breathing_lib_version}"
+
+    modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+    modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+    include modApi("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}")
+    //  Modmenu
+    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
+
+    //modImplementation "com.github.eggohito:eggolib:${project.eggolib_version}"
+    //include "com.github.eggohito:eggolib:${project.eggolib_version}"
 
 }
 
