--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ pluginManagement {
     repositories {
         maven {
             name = 'Fabric'
-            url = 'https://repository.hanbings.io/proxy'
+            url = "https://repository.hanbings.io/proxy"
         }
         gradlePluginPortal()
     }
