form_bat_0模型构建，完成playeranimator的使用测试，没什么大问题 第一人称模型使用firstperson的mod让其显示第三人称部件 之后需要根据形态修改动画的话可能需要做个与游戏动作同步的自定义状态机 需要的逻辑差不多跑通了，之后的活应该就是慢慢开发，应该就没有什么会非常头疼的问题了

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,12 @@ repositories {
     maven {
         url = "https://maven.terraformersmc.com"
     }
+
+    // player animator
+    maven {
+        name "KosmX's maven"
+        url 'https://maven.kosmx.dev/'
+    }
 }
 
 dependencies {
@@ -144,6 +150,9 @@ dependencies {
     include modApi("com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}")
     //  Modmenu
     modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
+    // Player Anim
+    include modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim}")
+
 
     //modImplementation "com.github.eggohito:eggolib:${project.eggolib_version}"
     //include "com.github.eggohito:eggolib:${project.eggolib_version}"
