--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,4 @@ carpet_version=1.20.2-1.4.119+v230928
 cca_version=5.1.0
 clothconfig_version=10.0.96
 pehkui_version=3.7.8
+player_anim=1.0.2-rc1+1.20
