--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,9 @@ dependencies {
     include "io.wispforest:owo-sentinel:${project.owo_version}"
     annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
 
+    // satin shader
+    modImplementation "org.ladysnake:satin:${satin_version}"
+
     // Reach Entity Attributes by jamieswhiteshirt
     modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
 
