进行服务端相关的问题修复，准备重写CursedMoon触发逻辑 Performing server-side bug fixes, preparing to rewrite the Cursed Moon trigger logic

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,14 @@ loom {
     runs {
         client {
             programArgs(["--username", "Dev"])
+            runDir "run/client"
+        }
+        server {
+            runDir "run/server"
         }
     }
 }
+
 
 repositories {
     // Add repositories to retrieve artifacts from in here.
