snow_fox 能力完成 snow_fox powers completed

--- a/src/main/resources/data/origins/origins/form_snow_fox_0.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_0.json
@@ -3,6 +3,8 @@
 		"origins:form_familiar_fox_0_scale",
 		"origins:form_familiar_fox_0_sprint_speed_up",
 		"origins:form_familiar_fox_0_water_speed_down",
+		"origins:form_snow_fox_0_triple_jump",
+		"origins:form_snow_fox_0_desert_health",
 
 
 		"origins:form_instinct_use_catalyst",
