--- a/src/main/resources/data/origins/origins/form_snow_fox_3.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_3.json
@@ -10,6 +10,20 @@
 		"origins:form_snow_fox_3_air_speed",
 		"origins:form_snow_fox_3_fall_speed",
 		"origins:form_snow_fox_bounce_cooldown",
+		"origins:form_snow_fox_walk_on_powder_snow",
+		"origins:form_snow_fox_3_snowball_up",
+		"origins:form_snow_fox_3_sweet_berry_up",
+		"origins:form_familiar_fox_3_digging_speed_down",
+
+		"origins:form_snow_fox_3_keep_burn",
+		"origins:form_snow_fox_3_burn_damage_up",
+		"origins:form_snow_fox_3_water_bottle_put_out_fire",
+		"origins:form_snow_fox_3_desert_health",
+		"origins:form_snow_fox_3_plain_health",
+		"origins:form_snow_fox_3_near_lava_damage",
+		"origins:form_snow_fox_3_near_fire_damage",
+		"origins:form_snow_fox_3_particle",
+		"origins:form_snow_fox_3_fox_friendly",
 
 		"origins:form_disable_leg_armor",
 		"origins:form_disable_feet_armor",
