snow_fox 能力微调，添加投掷雪球凝固流体的能力 snow_fox ability fine-tuned, added the capability to throw snowballs to solidify fluids

--- a/src/main/resources/data/origins/origins/form_snow_fox_1.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_1.json
@@ -9,6 +9,7 @@
 		"origins:form_snow_fox_1_critical_attack_up",
 		"origins:form_snow_fox_3_near_lava_damage",
 		"origins:form_snow_fox_1_desert_health",
+		"origins:form_snow_fox_3_snowball_up",
 
 		"origins:form_instinct_use_catalyst",
 		"origins:form_instinct_use_golden_apple",
