--- a/src/main/resources/data/origins/origins/form_snow_fox_3.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_3.json
@@ -14,6 +14,7 @@
 		"origins:form_snow_fox_3_snowball_up",
 		"origins:form_snow_fox_3_sweet_berry_up",
 		"origins:form_familiar_fox_3_digging_speed_down",
+		"origins:form_snow_fox_snowball_transform",
 
 		"origins:form_snow_fox_3_keep_burn",
 		"origins:form_snow_fox_3_burn_damage_up",
