--- a/src/main/resources/data/origins/origins/form_snow_fox_2.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_2.json
@@ -11,6 +11,8 @@
 		"origins:form_snow_fox_walk_on_powder_snow",
 		"origins:form_snow_fox_3_enhanced_falling_attack",
 		"origins:form_snow_fox_3_sweet_berry_up",
+		"origins:form_snow_fox_snowball_transform",
+		"origins:form_snow_fox_3_snowball_up",
 
 		"origins:form_snow_fox_3_burn_damage_up",
 		"origins:form_snow_fox_3_near_lava_damage",
