--- a/src/main/resources/assets/orif-defaults/geo/form_snow_fox_0.geo.json
+++ b/src/main/resources/assets/orif-defaults/geo/form_snow_fox_0.geo.json
@@ -44,7 +44,8 @@
 					"parent": "bipedBody",
 					"pivot": [0, 24, 0],
 					"cubes": [
-						{"origin": [-3, 20.98815, -2.49909], "size": [6, 3, 5], "pivot": [0, 22.58815, -3.09909], "rotation": [2.5, 0, 0], "uv": [40, 45]}
+						{"origin": [-4.5, 21.58815, -2.89909], "size": [9, 3, 6], "pivot": [0, 22.58815, -3.09909], "rotation": [-5, 0, 0], "uv": [36, 44]},
+						{"origin": [-2.5, 20.13875, 1.89397], "size": [5, 1, 1], "pivot": [0, 21.13875, 1.99397], "rotation": [5, 0, 0], "uv": [45, 49]}
 					]
 				},
 				{
