--- a/src/main/resources/assets/orif-defaults/geo/form_snow_fox_3.geo.json
+++ b/src/main/resources/assets/orif-defaults/geo/form_snow_fox_3.geo.json
@@ -100,7 +100,9 @@
 					"pivot": [0, 24, 0],
 					"cubes": [
 						{"origin": [-4.1, 16, -3.3], "size": [8.2, 9, 7], "uv": [34, 37]},
-						{"origin": [-4.6, 18.3, -3.4], "size": [9.2, 7, 5], "pivot": [-0.5, 20.8, 2.1], "rotation": [-27.5, 0, 0], "uv": [36, 0]}
+						{"origin": [-4.6, 18.3, -3.4], "size": [9.2, 7, 5], "pivot": [-0.5, 20.8, 2.1], "rotation": [-27.5, 0, 0], "uv": [36, 0]},
+						{"origin": [-5.6, 16.3, -5.8], "size": [11.2, 8, 5], "pivot": [-0.5, 16.8, -0.9], "rotation": [-27.5, 0, 0], "uv": [34, 0]},
+						{"origin": [-4.6, 15.55524, -4.57704], "size": [9.2, 3, 3], "pivot": [0, 16.45524, -3.47704], "rotation": [17.5, 0, 0], "uv": [40, 45]}
 					]
 				},
 				{
