修改手臂显示黑名单,由硬编码转换为数据包Power,增加对之后特殊形态的支持.

--- a/src/main/resources/data/origins/origins/form_snow_fox_2.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_2.json
@@ -1,5 +1,6 @@
 {
 	"powers": [
+		"origins:no_render_arm_when_sneaking",
 		"origins:form_familiar_fox_2_scale",
 		"origins:form_sprint_speed_up",
 		"origins:form_disable_leg_armor",
