实现所有能力可被数据包修改Step3 - 转移硬编码逻辑到Power

--- a/src/main/resources/data/origins/origins/form_snow_fox_1.json
+++ b/src/main/resources/data/origins/origins/form_snow_fox_1.json
@@ -15,7 +15,9 @@
 		"origins:form_instinct_use_golden_apple",
 		"origins:form_familiar_fox_instinct_in_berry_bush",
 		"origins:form_familiar_fox_instinct_biome",
-		"origins:form_snow_fox_instinct_sprint_jump"
+		"origins:form_snow_fox_instinct_sprint_jump",
+
+		"origins:prevent_berry_effect"
 	],
 	"icon": {
 		"item": "minecraft:player_head"
