修复富文本显示 修改依赖

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,19 @@ repositories {
         }
 
     }
+
+    // ForgeMaven
+    exclusiveContent {
+        forRepository {
+            maven {
+                url "https://cursemaven.com"
+            }
+        }
+        filter {
+            includeGroup "curse.maven"
+        }
+    }
+
     maven {
         name = "QuiltMC"
         url = "https://maven.quiltmc.org/repository/release"
@@ -137,6 +150,9 @@ dependencies {
     //annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
     modCompileOnly "io.wispforest:owo-lib:${owo_version}"
     modRuntimeOnly "io.wispforest:owo-lib:${owo_version}"
+
+    // Rich Translatable Text
+    modLocalRuntime "curse.maven:rich-translatable-text-1342784:6975662"
 
     // satin shader
     modImplementation "org.ladysnake:satin:${satin_version}"
