--- a/src/main/resources/data/origins/powers/form_familiar_fox_instinct_biome.json
+++ b/src/main/resources/data/origins/powers/form_familiar_fox_instinct_biome.json
@@ -1,6 +1,8 @@
 {
   "type": "origins:add_sustained_instinct",
-  "instinct_effect_type": "FORM_FAMILIAR_FOX_BIOME",
+  "instinct_effect_id": "FORM_FAMILIAR_FOX_BIOME",
+  "value": 0.002,
+  "duration": 1,
   "condition": {
     "type": "origins:biome",
     "condition": {
