--- a/src/main/resources/data/origins/powers/form_familiar_fox_instinct_moving_on_snow.json
+++ b/src/main/resources/data/origins/powers/form_familiar_fox_instinct_moving_on_snow.json
@@ -1,6 +1,8 @@
 {
   "type": "origins:add_sustained_instinct",
-  "instinct_effect_type": "FORM_FAMILIAR_FOX_MOVING_ON_SNOW",
+  "instinct_effect_id": "FORM_FAMILIAR_FOX_MOVING_ON_SNOW",
+  "value": 0.008,
+  "duration": 1,
   "condition": {
     "type": "origins:and",
     "conditions": [
