--- a/src/main/resources/data/origins/powers/form_instinct_use_golden_apple.json
+++ b/src/main/resources/data/origins/powers/form_instinct_use_golden_apple.json
@@ -1,26 +1,26 @@
 {
-  "type": "origins:add_sustained_instinct_in_time",
-  "instinct_effect_type": "FORM_USE_GOLDEN_APPLE",
-  "duration": 40,
-  "is_on_item_finished": true,
-  "condition": {
-    "type": "origins:using_item",
-    "item_condition": {
-      "type": "origins:or",
-      "conditions": [
-        {
-          "type": "origins:ingredient",
-          "ingredient": {
-            "item": "minecraft:golden_apple"
-          }
-        },
-        {
-          "type": "origins:ingredient",
-          "ingredient": {
-            "item": "minecraft:enchanted_golden_apple"
-          }
+  "type": "origins:action_on_item_use",
+  "entity_action": {
+    "type": "origins:add_instinct",
+    "instinct_effect_id": "FORM_USE_GOLDEN_APPLE",
+    "value": -2.125,
+    "duration": 40
+  },
+  "item_condition": {
+    "type": "origins:or",
+    "conditions": [
+      {
+        "type": "origins:ingredient",
+        "ingredient": {
+          "item": "minecraft:golden_apple"
         }
-      ]
-    }
+      },
+      {
+        "type": "origins:ingredient",
+        "ingredient": {
+          "item": "minecraft:enchanted_golden_apple"
+        }
+      }
+    ]
   }
 }
