--- a/src/main/resources/data/origins/powers/form_snow_fox_1_critical_attack_up.json
+++ b/src/main/resources/data/origins/powers/form_snow_fox_1_critical_attack_up.json
@@ -2,7 +2,9 @@
   "type": "origins:critical_damage_modifier",
   "action": {
     "type": "origins:add_instinct",
-    "instinct_effect_type": "FORM_SNOW_FOX_CRITICAL_ATTACK"
+    "instinct_effect_id": "FORM_SNOW_FOX_CRITICAL_ATTACK",
+    "value": 1.0,
+    "duration": 0
   },
   "multiplier": 1.3
 }
