--- a/src/main/resources/data/origins/powers/form_snow_fox_instinct_sprint_jump.json
+++ b/src/main/resources/data/origins/powers/form_snow_fox_instinct_sprint_jump.json
@@ -1,6 +1,8 @@
 {
   "type": "origins:add_sustained_instinct",
-  "instinct_effect_type": "FORM_SNOW_FOX_SPRINT_JUMP",
+  "instinct_effect_id": "FORM_SNOW_FOX_SPRINT_JUMP",
+  "value": 0.008,
+  "duration": 1,
   "condition": {
     "type": "origins:and",
     "conditions": [
