--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ base {
 loom {
     runs {
         client {
-            programArgs(["--username", "Dev"])
+            programArgs([
+                    "--username", "Dev",
+                    "--uuid", "12345678-1234-1234-1234-123456789012"
+            ])
             runDir "run/client"
         }
         server {
