--- a/src/main/resources/data/origins/powers/form_snow_fox_2_plain_health.json
+++ b/src/main/resources/data/origins/powers/form_snow_fox_2_plain_health.json
@@ -1,11 +1,13 @@
 {
-  "type": "origins:conditioned_attribute",
+  "type": "origins:delay_attribute",
   "modifier": {
     "attribute": "minecraft:generic.max_health",
     "value": -2.0,
     "operation": "addition"
   },
   "tick_rate": 20,
+  "updateHealth": true,
+  "delay": 5,
   "condition": {
     "type": "origins:and",
     "conditions": [
