当前所有形态的换色mask都完成了，可以进行效果测试

--- a/src/main/resources/assets/orif-defaults/furs/shape-shifter-curse.form_snow_fox_3.json
+++ b/src/main/resources/assets/orif-defaults/furs/shape-shifter-curse.form_snow_fox_3.json
@@ -1,6 +1,7 @@
 {
   "model": "orif-defaults:geo/form_snow_fox_3.geo.json",
   "texture": "orif-defaults:textures/form_snow_fox_3/form_snow_fox_3.png",
+  "texture_mask": "orif-defaults:textures/form_snow_fox_3/form_snow_fox_3_colormask.png",
   "hidden": [
     "leftLeg",
     "rightLeg",
