--- a/src/main/resources/assets/orif-defaults/furs/shape-shifter-curse.form_snow_fox_0.json
+++ b/src/main/resources/assets/orif-defaults/furs/shape-shifter-curse.form_snow_fox_0.json
@@ -1,6 +1,7 @@
 {
   "model": "orif-defaults:geo/form_snow_fox_0.geo.json",
   "texture": "orif-defaults:textures/form_snow_fox_0/form_snow_fox_0.png",
+  "texture_mask": "orif-defaults:textures/form_snow_fox_0/form_snow_fox_0_colormask.png",
   "hidden": [
 
   ],
