--- a/src/main/resources/assets/orif-defaults/furs/shape-shifter-curse.form_snow_fox_2.json
+++ b/src/main/resources/assets/orif-defaults/furs/shape-shifter-curse.form_snow_fox_2.json
@@ -1,6 +1,7 @@
 {
   "model": "orif-defaults:geo/form_snow_fox_2.geo.json",
   "texture": "orif-defaults:textures/form_snow_fox_2/form_snow_fox_2.png",
+  "texture_mask": "orif-defaults:textures/form_snow_fox_2/form_snow_fox_2_colormask.png",
   "hidden": [
     "leftLeg",
     "rightLeg",
