--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,7 @@ dependencies {
     //compileOnly "mod.azure.azurelib:azurelib-common-1.20.1:2.0.41"
 
     //Fabric or Quilt
-    modImplementation "mod.azure.azurelib:azurelib-fabric-1.20.1:2.0.41"
+    modImplementation "mod.azure.azurelib:azurelib-fabric-1.20.1:${azurelib_version}"
     //modCompileOnly "maven.modrinth:azurelib:2.1.17"
 
 
