--- a/gradle.properties
+++ b/gradle.properties
@@ -38,5 +38,6 @@ cca_version=5.1.0
 clothconfig_version=10.0.96
 pehkui_version=3.7.8
 player_anim=1.0.2-rc1+1.20
+azurelib_version=3.0.19
 
 satin_version = 1.14.0
