修复 #169 现在雪狐在鞘翅飞行时不会触发右键方块弹跳功能

--- a/src/main/resources/data/shape-shifter-curse/powers/form_snow_fox_3_falling_bouncing.json
+++ b/src/main/resources/data/shape-shifter-curse/powers/form_snow_fox_3_falling_bouncing.json
@@ -16,6 +16,10 @@
                 "type": "origins:fall_distance",
                 "comparison": ">=",
                 "compare_to": 0.5
+            },
+            {
+                "type": "origins:fall_flying",
+                "inverted": true
             }
         ]
     },
