--- a/.github/workflows/Build_Dev_Version.yml
+++ b/.github/workflows/Build_Dev_Version.yml
@@ -38,8 +38,16 @@ jobs:
       - name: 构建Mod # 如果失败请检查代码是否有错误
         run: ./gradlew build
 
+      - name: 获取版本信息
+        id: 'version'
+        run:
+          # 如果获取不到版本信息 可以在Linux环境下运行下面的命令
+          # ls build/libs | grep sources.jar -v | grep shadow.jar -v | grep slim.jar -v | awk -F 'shape-shifter-curse-fabric-|.jar' '{print $2}'
+          MESSAGE=$(ls build/libs | grep sources.jar -v | grep shadow.jar -v | grep slim.jar -v | awk -F '${{ steps.properties.outputs.archives_base_name }}-|.jar' '{print $2}')
+          echo "version=$MESSAGE" >> $GITHUB_OUTPUT
+
       - name: 发布构建产物 # 如果没有Action中没有发布Jar 请检查Gradle配置文件
         uses: actions/upload-artifact@v4.3.3
         with:
-          name: "${{ steps.properties.outputs.archives_base_name }}-${{ steps.properties.outputs.mod_version }}-InDev"
-          path: build/libs/${{ steps.properties.outputs.archives_base_name }}-${{ steps.properties.outputs.mod_version }}.jar
+          name: "${{ steps.properties.outputs.archives_base_name }}-${{ steps.version.outputs.version }}"
+          path: build/libs/${{ steps.properties.outputs.archives_base_name }}-${{ steps.version.outputs.version }}.jar
