--- a/build.gradle
+++ b/build.gradle
@@ -157,6 +157,7 @@ dependencies {
 
     //Fabric or Quilt
     modImplementation "mod.azure.azurelib:azurelib-fabric-1.20.1:${azurelib_version}"
+    include "mod.azure.azurelib:azurelib-fabric-1.20.1:${azurelib_version}"
     //modCompileOnly "maven.modrinth:azurelib:2.1.17"
 
 
