解决Wiki上`尚无法为自定义形态添加给与变形效果的特殊生物`的问题

--- a/custom_form_pack_example/example_form_datapack/data/example_namespace/origins_power_extra/append_transform.json
+++ b/custom_form_pack_example/example_form_datapack/data/example_namespace/origins_power_extra/append_transform.json
@@ -1,6 +1,7 @@
 {
   "TargetOriginsID": "shape-shifter-curse:form_original_shifter",
   "ExtraPowers": [
-    "example_namespace:to_example_form"
+    "example_namespace:to_example_form",
+    "example_namespace:to_example_form_by_effect"
   ]
 }
