--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.jvmargs=-Xmx8G
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
 	fabric_version=0.92.3+1.20.1
-apoli_version=20a6d55545
+	apoli_version=2.9.2+mc.1.20.x
 	reach_version = 2.4.0
 	breathing_lib_version = 01269c3
 	mod_menu_version = 7.2.2
