--- a/src/main/resources/data/shape-shifter-curse/powers/form_snow_fox_3_sweet_berry_up.json
+++ b/src/main/resources/data/shape-shifter-curse/powers/form_snow_fox_3_sweet_berry_up.json
@@ -2,13 +2,13 @@
     "type": "origins:modify_food",
     "food_modifier": {
         "name": "increase food points",
-        "operation": "multiply_base_multiplicative",
-        "value": 1.0
+        "operation": "addition",
+        "value": 6.0
     },
     "saturation_modifier": {
         "name": "increase food points",
-        "operation": "multiply_base_multiplicative",
-        "value": 1.0
+        "operation": "addition",
+        "value": 0.5
     },
     "item_condition": {
         "type": "origins:ingredient",
