--- a/src/main/resources/data/shape-shifter-curse/origins/form_snow_fox_2.json
+++ b/src/main/resources/data/shape-shifter-curse/origins/form_snow_fox_2.json
@@ -19,7 +19,9 @@
         "shape-shifter-curse:form_snow_fox_2_desert_health",
         "shape-shifter-curse:form_snow_fox_2_plain_health",
         "shape-shifter-curse:form_familiar_fox_sound_hurt",
-        "shape-shifter-curse:prevent_berry_effect"
+        "shape-shifter-curse:prevent_berry_effect",
+        "shape-shifter-curse:form_snow_fox_bottled_snowfall_tool",
+        "shape-shifter-curse:form_snow_fox_bottled_snowfall_cooldown"
     ],
     "icon": {
         "item": "minecraft:player_head"
