--- a/src/main/resources/data/shape-shifter-curse/origins/form_snow_fox_3.json
+++ b/src/main/resources/data/shape-shifter-curse/origins/form_snow_fox_3.json
@@ -29,7 +29,9 @@
         "shape-shifter-curse:form_disable_feet_armor",
         "shape-shifter-curse:form_familiar_fox_sound_hurt",
         "shape-shifter-curse:form_familiar_fox_sound",
-        "shape-shifter-curse:prevent_berry_effect"
+        "shape-shifter-curse:prevent_berry_effect",
+        "shape-shifter-curse:form_snow_fox_bottled_snowfall_tool",
+        "shape-shifter-curse:form_snow_fox_bottled_snowfall_cooldown"
     ],
     "icon": {
         "item": "minecraft:player_head"
