--- a/src/main/resources/data/shape-shifter-curse/origins/form_snow_fox_3.json
+++ b/src/main/resources/data/shape-shifter-curse/origins/form_snow_fox_3.json
@@ -31,7 +31,8 @@
         "shape-shifter-curse:form_familiar_fox_sound",
         "shape-shifter-curse:prevent_berry_effect",
         "shape-shifter-curse:form_snow_fox_bottled_snowfall_tool",
-        "shape-shifter-curse:form_snow_fox_bottled_snowfall_cooldown"
+        "shape-shifter-curse:form_snow_fox_bottled_snowfall_cooldown",
+        "shape-shifter-curse:form_familiar_fox_sound_key"
     ],
     "icon": {
         "item": "minecraft:player_head"
