--- a/src/main/resources/data/shape-shifter-curse/powers/form_snow_fox_frost_pawglove_trinket.json
+++ b/src/main/resources/data/shape-shifter-curse/powers/form_snow_fox_frost_pawglove_trinket.json
@@ -1,7 +1,7 @@
 {
   "type": "origins:multiple",
 
-  "snow_ball_enhancement": {
+  "snow_ball_damage_down": {
     "type": "origins:modify_projectile_damage",
     "damage_condition": {
       "type": "origins:projectile",
@@ -17,7 +17,30 @@
         {
           "type": "origins:execute_command",
           "command": "particle minecraft:crit ~ ~0.5 ~ 0.2 0.2 0.2 0 10"
-        },
+        }
+      ]
+    },
+    "self_action": {
+      "type": "origins:play_sound",
+      "sound": "minecraft:entity.firework_rocket.blast_far"
+    }
+  },
+
+  "snow_ball_effect": {
+    "type": "origins:modify_projectile_damage",
+    "damage_condition": {
+      "type": "origins:projectile",
+      "projectile": "minecraft:snowball"
+    },
+    "condition": {
+      "type": "origins:resource",
+      "resource": "shape-shifter-curse:form_snow_fox_snowball_effect_cooldown",
+      "comparison": "<",
+      "compare_to": 1
+    },
+    "target_action": {
+      "type": "origins:and",
+      "actions": [
         {
           "type": "origins:spawn_effect_cloud",
           "radius": 3.0,
@@ -32,8 +55,8 @@
       ]
     },
     "self_action": {
-      "type": "origins:play_sound",
-      "sound": "minecraft:entity.firework_rocket.blast_far"
+      "type": "origins:trigger_cooldown",
+      "power": "shape-shifter-curse:form_snow_fox_snowball_effect_cooldown"
     }
   },
 
@@ -43,4 +66,5 @@
       "minecraft:slowness"
     ]
   }
+
 }
